# cellml2py

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: HumanSAN_Fabbri_Fantini_Wilders_Severi_2017.cellml  fabbri_SAN_2017.py
examples/: example_utils.py  hh_spiking_with_forcing.ipynb  san_spiking_rush_larsen.ipynb  san_spiking_with_forcing.ipynb  san_spiking_with_forcing_jax.ipynb
src/cellml2py/: __init__.py  api.py  cellml_adapter.py  cellml_compiler.py  contracts.py  exceptions.py  opencor_adapter.py  rl_solver.py
tests/: test_cellml_upstream_models.py  test_import_and_contracts.py  test_opencor_parity.py  test_overrides.py
